--- a/machine_learning_project.ipynb
+++ b/machine_learning_project.ipynb
@@ -1861,12 +1861,95 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import os\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "# 1️⃣ **Load Data**\n",
+        "file_path = \"AutoInsurance.xlsx\"\n",
+        "\n",
+        "# **Check if File Exists (Important for GitHub)**\n",
+        "if not os.path.exists(file_path):\n",
+        "    raise FileNotFoundError(f\"❌ Error: {file_path} not found. Please upload the dataset.\")\n",
+        "\n",
+        "df = pd.read_excel(file_path, sheet_name=\"AutoInsurance\")\n",
+        "\n",
+        "# 2️⃣ **Define Features and Target**\n",
+        "target_column = \"Gender\"  # **तुमच्या dataset मध्ये योग्य कॉलम ठेवा**\n",
+        "X = df.drop(columns=[target_column])\n",
+        "y = df[target_column]\n",
+        "\n",
+        "# 3️⃣ **Train-Test Split**\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# 4️⃣ **Handle Categorical Columns (Fixed)**\n",
+        "categorical_columns = X_train.select_dtypes(include=['object']).columns\n",
+        "label_encoders = {}\n",
+        "\n",
+        "for col in categorical_columns:\n",
+        "    le = LabelEncoder()\n",
+        "    X_train[col] = le.fit_transform(X_train[col].astype(str))\n",
+        "    X_test[col] = X_test[col].apply(lambda x: le.transform([x])[0] if x in le.classes_ else -1)\n",
+        "    label_encoders[col] = le\n",
+        "\n",
+        "# 5️⃣ **Fill Missing Values (FutureWarning Fixed)**\n",
+        "for col in X_train.columns:\n",
+        "    if X_train[col].dtype == 'object':\n",
+        "        X_train[col] = X_train[col].fillna(X_train[col].mode()[0])\n",
+        "        X_test[col] = X_test[col].fillna(X_test[col].mode()[0])\n",
+        "    else:\n",
+        "        X_train[col] = X_train[col].fillna(X_train[col].median())\n",
+        "        X_test[col] = X_test[col].fillna(X_test[col].median())\n",
+        "\n",
+        "# 6️⃣ **Define Model**\n",
+        "rf = RandomForestClassifier(random_state=42)\n",
+        "\n",
+        "# 7️⃣ **Hyperparameter Grid (Reduced for Speed)**\n",
+        "param_dist = {\n",
+        "    'n_estimators': [50, 100],\n",
+        "    'max_depth': [10, 20, None],\n",
+        "    'min_samples_split': [2, 5],\n",
+        "    'min_samples_leaf': [1, 2]\n",
+        "}\n",
+        "\n",
+        "# 8️⃣ **Randomized Search (Faster than GridSearch)**\n",
+        "random_search = RandomizedSearchCV(rf, param_distributions=param_dist, n_iter=5, cv=3, scoring='accuracy', n_jobs=-1, verbose=1, random_state=42)\n",
+        "\n",
+        "# **Try-Except to Handle Errors in GitHub**\n",
+        "try:\n",
+        "    random_search.fit(X_train, y_train)\n",
+        "    print(\"✅ Model Training Complete!\")\n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error in Model Training: {e}\")\n",
+        "\n",
+        "# 9️⃣ **Best Model Output**\n",
+        "print(\"✅ Best Parameters:\", random_search.best_params_)\n",
+        "print(\"✅ Best Accuracy:\", random_search.best_score_)\n"
+      ],
       "metadata": {
-        "id": "zaooRMTogb_M"
+        "id": "zaooRMTogb_M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3eb86f5f-667a-4232-c6d5-5a4f531e1ebb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n",
+            "✅ Model Training Complete!\n",
+            "✅ Best Parameters: {'n_estimators': 50, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_depth': None}\n",
+            "✅ Best Accuracy: 0.596415112576693\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
