--- a/machine_learning_project.ipynb
+++ b/machine_learning_project.ipynb
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "c01BTy0WMMVq"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "6XGHU4TrP_Zx"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -58,13 +58,13 @@
       ],
       "metadata": {
         "id": "0x0m2dCGQRCD",
-        "outputId": "59547b58-1957-4832-c0e2-ab21267063d1",
+        "outputId": "76b9d6c8-ebb1-4962-ef0b-83558abcafe6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 463
         }
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +109,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1da44ef0-07d4-4148-bd2c-fbf066212699\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d0786888-2396-4230-aa8e-967f8b5522da\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -279,7 +279,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1da44ef0-07d4-4148-bd2c-fbf066212699')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0786888-2396-4230-aa8e-967f8b5522da')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -331,12 +331,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1da44ef0-07d4-4148-bd2c-fbf066212699 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d0786888-2396-4230-aa8e-967f8b5522da button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1da44ef0-07d4-4148-bd2c-fbf066212699');\n",
+              "        const element = document.querySelector('#df-d0786888-2396-4230-aa8e-967f8b5522da');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -356,8 +356,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-710f5475-de4e-436d-ace8-0933310ce81b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-710f5475-de4e-436d-ace8-0933310ce81b')\"\n",
+              "<div id=\"df-a4663fd6-f1d0-4978-adfa-e2f847659923\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a4663fd6-f1d0-4978-adfa-e2f847659923')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -476,7 +476,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-710f5475-de4e-436d-ace8-0933310ce81b button');\n",
+              "        document.querySelector('#df-a4663fd6-f1d0-4978-adfa-e2f847659923 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -492,7 +492,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 67
         }
       ]
     },
@@ -512,13 +512,13 @@
       ],
       "metadata": {
         "id": "DZuoP7RnSIlX",
-        "outputId": "e1d86d5f-54fe-49f0-fab3-f8bfe0229ba8",
+        "outputId": "e72c74dc-2db6-4ea4-dac4-8503a85c346e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 836
         }
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +675,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 68
         }
       ]
     },
@@ -686,12 +686,12 @@
       ],
       "metadata": {
         "id": "uOwssVumSIh7",
-        "outputId": "ddf8dccd-2dba-48e7-8841-e0241f847ac0",
+        "outputId": "3d6c4e41-2a87-4e53-90e7-81d06b2502c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,13 +739,13 @@
       ],
       "metadata": {
         "id": "gxk5xqSiSIfh",
-        "outputId": "7301a19a-06f4-4692-9a78-7babc71bec13",
+        "outputId": "839b148a-3381-4ea6-c421-b0be8bd228e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
         }
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +783,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-81803d70-3657-4228-9005-6d44a7719fd7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7ac1db08-39af-4e70-9510-b3982d8e2ae7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -907,7 +907,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-81803d70-3657-4228-9005-6d44a7719fd7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ac1db08-39af-4e70-9510-b3982d8e2ae7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -959,12 +959,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-81803d70-3657-4228-9005-6d44a7719fd7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7ac1db08-39af-4e70-9510-b3982d8e2ae7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-81803d70-3657-4228-9005-6d44a7719fd7');\n",
+              "        const element = document.querySelector('#df-7ac1db08-39af-4e70-9510-b3982d8e2ae7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -984,8 +984,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6abd539c-0d71-42ae-af8e-d0d452197f82\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6abd539c-0d71-42ae-af8e-d0d452197f82')\"\n",
+              "<div id=\"df-bb3a3430-2cc4-4d88-a4c0-275598da6d3a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bb3a3430-2cc4-4d88-a4c0-275598da6d3a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1104,7 +1104,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6abd539c-0d71-42ae-af8e-d0d452197f82 button');\n",
+              "        document.querySelector('#df-bb3a3430-2cc4-4d88-a4c0-275598da6d3a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1120,7 +1120,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 70
         }
       ]
     },
@@ -1141,7 +1141,7 @@
       "metadata": {
         "id": "FP_uiNkNSIXq"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -1152,7 +1152,7 @@
       "metadata": {
         "id": "3wLujCEQSIVW"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -1170,7 +1170,7 @@
         "\n",
         "# **Check if File Exists (Important for GitHub)**\n",
         "if not os.path.exists(file_path):\n",
-        "    raise FileNotFoundError(f\"❌ Error: {file_path} not found. Please upload the dataset.\")\n",
+        "    raise FileNotFoundError(f\" Error: {file_path} not found. Please upload the dataset.\")\n",
         "\n",
         "df = pd.read_excel(file_path, sheet_name=\"AutoInsurance\")\n",
         "\n",
@@ -1231,9 +1231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nLpYOo8N_nXS",
-        "outputId": "c449aa20-ca2e-4d31-ef73-8855f34d7b25"
+        "outputId": "55947b05-fcc4-429c-dc27-c0c2eac0533a"
       },
-      "execution_count": 63,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -1275,9 +1275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bNsfHo1igcED",
-        "outputId": "1ec034b9-39f6-4ff4-bdeb-53d49641d0ad"
+        "outputId": "35d6a444-829f-43eb-cb15-c78fcf479683"
       },
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
